hphp/test/zend/bad/ext/standard/tests/file/bug35740.php
<?php

include (dirname(__FILE__));

echo "Done\n";
?>